Added Aikar's flags (#60)
Signed-off-by: Jonas <hello@jonas.coffee>